# TREA-C

./: .gitignore  CLAUDE.md  LICENSE.txt  MULTI_DATASET_PLAN.md  PRETRAINING_STATUS.md  README.md  TRAINING_REPORT.md  benchmark_patch_sizes.py  create_diverse_w3_dataset.py  create_multiclass_w3_dataset.py  debug_dataset_speed.py  diagnose_nan_loss.py  diagnose_w3_issues.py  duet_performance_analysis.md  etth1_duet_vs_patchtstnan_nan5pct.csv  etth1_model_comparison.csv  explain_nan_loss.py  final_patchduet_comparison.csv  fix_w3_data_issues.py  hello.py  instructions.md  investigate_w3_state_issue.py  pyproject.toml  test_memory_usage.py  test_overfitting_etth1.py  test_patchtstnan_etth1.py  test_pretrain.py  test_simple_pretrain.py  test_synthetic_data.py  test_temporal_only.py  train_patchtstnan.py  train_patchtstnan_improved.py  train_patchtstnan_quick_test.py  train_patchtstnan_ultra_fast.py  train_w3.py
cache/column_embeddings/: bert_embeddings_bert-base-uncased.pkl  metadata_bert-base-uncased.json
datasets/outputs/comparisons/: final_patchduet_comparison.csv
datasets/outputs/experiments/: multi_dataset_experiment.csv  real_world_experiment.csv  variable_feature_experiment.csv
datasets/real_world/air_quality/: val_data.npy  val_labels.npy
datasets/real_world/financial_market/: val_data.npy  val_labels.npy
datasets/real_world/human_activity/: train_labels.npy  val_labels.npy
duet/: __init__.py
duet/data/: __init__.py  air_quality.py  config.py  datamodule.py  datamodule_v2.py  dataset.py  etth1.py  financial_market.py  human_activity.py  multi_dataset_loader.py  nasa_turbofan.py  pump_sensor.py
duet/models/: __init__.py  column_embeddings.py  duet_model.py  dynamic_sequence_patch_duet.py  embeddings.py  multi_dataset_embeddings.py  multi_dataset_model.py  multi_dataset_patch_duet.py  patch_duet.py  patchtstnan.py  pretrain_patch_duet.py  ssl_objectives.py  transformer.py  variable_feature_patch_duet.py
duet/training/: __init__.py
duet/utils/: __init__.py  paths.py  sequence_standardization.py
examples/: benchmark_patch_sizes.py  compare_duet_vs_patchtstnan.py  compare_models_etth1.py  compare_models_turbofan.py  create_diverse_w3_dataset.py  create_multiclass_w3_dataset.py  dataset.py  debug_dataset_speed.py  diagnose_nan_loss.py  diagnose_w3_issues.py  download_har_dataset.py  final_patch_comparison.py  fix_w3_data_issues.py  hf_patchtst_classifier.py  investigate_w3_state_issue.py  multi_dataset_demo.py  real_world_demo.py  test_overfitting_etth1.py  test_patchtstnan_etth1.py  test_treac_fix.py  train_example.py  train_har.py  train_patchtstnan_ultra_fast.py  train_pump_sensor.py  train_regression.py  train_turbofan.py  train_w3.py  variable_feature_demo.py
examples/outputs/: etth1_duet_vs_patchtstnan_nan5pct.csv  etth1_model_comparison.csv  final_patchduet_comparison.csv  turbofan_model_comparison.csv
scripts/: download_bearing_dataset.py  download_nasa_cmapss.py  download_turbofan.py  evaluate_pretraining.py  finetune.py  list_tensorboard_logs.py  pretrain.py
tests/: __init__.py  test_column_embeddings.py
treac/: __init__.py
treac/models/: __init__.py  embeddings.py  multi_dataset_model.py  patchtstnan.py  ssl_objectives.py  triple_attention.py
treac/training/: __init__.py
treac/utils/: __init__.py  paths.py  sequence_standardization.py
utils/: __init__.py  datamodule.py  dataset_base.py
